test/mutation_analysis/s0134_gas_station/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0134_gas_station/hafis/starchat/mutants/2/Solution.java:27: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
